Fixed spacing so icon and timestamp fit on same line.

--- a/assets/css/v2/pre_fare/cr_departures/cr_departures_table.scss
+++ b/assets/css/v2/pre_fare/cr_departures/cr_departures_table.scss
@@ -28,8 +28,8 @@
     line-height: 56px;
   }
   .arrival {
-    padding-left: 60px;
-    width: 180px;
+    padding-left: 45px;
+    width: 200px;
     height: 64px;
     font-size: 72px;
     font-weight: 800;
